# ros2-mujoco-robotics-project

./: COMPLETE_DOCUMENTATION.md  DEMO_GUIDE.md  ISSUES_RESOLVED.md  PICK_AND_PLACE_DEMO.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_DEMO_REFERENCE.md  README.md  SCRIPT.MD  VIDEO_GUIDE.md  VISUALIZATION_GUIDE.md  demo_all_milestones.sh  ms1_video_demo.sh  ms2_video_demo.sh  ms3_video_demo.sh  ms4_video_demo.sh  ms5_video_demo.sh  robotics-project.txt  run_visualization.sh  test_all.sh
install/: local_setup.sh  setup.sh
log/: latest_build
ms1/: github-repo-link.txt  literature-review.txt
ms1/4-dof-robotic-arm-5.snapshot.3/: 01. Base.SLDPRT  02. Link C33 Connector.SLDPRT  03. Link C22.SLDPRT  04. Link C33.SLDPRT  05. Tool Holder.SLDPRT  06. Revolver.SLDPRT  07. Combiner.SLDPRT  08. Cutter.SLDPRT  4 DOF Robotic Arm.SLDASM
ms2/: README.md
ms2/docs/: DH_Convention.md
ms2/ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ms2/ros2_ws/install/robot_arm_description/share/robot_arm_description/: package.sh  package.xml
ms2/ros2_ws/install/robot_arm_description/share/robot_arm_description/launch/: display.launch.py
ms2/ros2_ws/install/robot_arm_description/share/robot_arm_description/rviz/: display.rviz  motion.rviz
ms2/ros2_ws/log/: latest_build
ms3/: README.md
ms3/demos/: MUJOCO_LOG.TXT  integrated_demo.py  interactive_demo.py  test_kinematics.py  test_mujoco.py  validate_kinematics.py  visual_demo.py
ms3/launch/: integrated_demo.launch.py
ms3/mujoco/: mujoco_simulator.py  robot_arm.xml
ms3/ros2_ws/install/: local_setup.sh  (+1 more)
(+25 files in other folders)
